--- a/refrences.bib
+++ b/refrences.bib
@@ -264,7 +264,7 @@ on root volumes, especially during early boot. In this paper we describe an appr
 	file = {ScienceDirect Snapshot:/Users/ebelechukwu/Library/Application Support/Zotero/Profiles/17a8i7ac.default/zotero/storage/I2WG2N2Q/S1389128610001568.html:text/html}
 }
 
-@misc{_extensible_????,
+@misc{xacml,
 	title = {{eXtensible} {Access} {Control} {Markup} {Language} ({XACML}) {Version} 3.0},
 	url = {http://docs.oasis-open.org/xacml/3.0/xacml-3.0-core-spec-os-en.html},
 	urldate = {2016-09-18},
@@ -437,3 +437,42 @@ on root volumes, especially during early boot. In this paper we describe an appr
     year        = "2015",
     month       = "sep"
 }
+
+@TECHREPORT {dave,
+    author      = "Dave Evans",
+    title       = "The Internet of Things How the Next Evolution of the Internet Is Changing Everything",
+    institution = "CISCO",
+    year        = "2011",
+    month       = "apr"
+}
+
+
+@book{Sayood:2000:IDC:336428,
+ author = {Sayood, Khalid},
+ title = {Introduction to Data Compression (2Nd Ed.)},
+ year = {2000},
+ isbn = {1-55860-558-4},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ address = {San Francisco, CA, USA},
+} 
+
+@article{Xie:2016:UID:2936026.2936232,
+ author = {Xie, Yulai and Feng, Dan and Tan, Zhipeng and Zhou, Junzhe},
+ title = {Unifying Intrusion Detection and Forensic Analysis via Provenance Awareness},
+ journal = {Future Gener. Comput. Syst.},
+ issue_date = {August 2016},
+ volume = {61},
+ number = {C},
+ month = aug,
+ year = {2016},
+ issn = {0167-739X},
+ pages = {26--36},
+ numpages = {11},
+ url = {http://dx.doi.org/10.1016/j.future.2016.02.005},
+ doi = {10.1016/j.future.2016.02.005},
+ acmid = {2936232},
+ publisher = {Elsevier Science Publishers B. V.},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+ keywords = {False alarm, Forensic analysis, Intrusion detection, Provenance},
+} 
+
